--- a/hwk2.rmd
+++ b/hwk2.rmd
@@ -14,6 +14,8 @@ library(FactoMineR)
 data(decathlon)
 ```
 
+In case you want to see the arithmetic I did with inline code, here is the GitHub link to .rmb file:   https://github.com/vader-coder/Stat11/blob/master/hwk2.rmd
+
 1. Reaction time, measured from the moment the
 driver first sees the danger until he or she gets a foot on the brake pedal, is thought to follow a Normal
 model with a mean of 1.5 seconds and a standard deviation of 0.18 seconds.  
