--- a/alligator.rmd
+++ b/alligator.rmd
@@ -16,8 +16,26 @@ weight <- c(83,70,61,54,44,106,84,39,42,197,102,57,130,51,640,28,80,110,33,90,36
 length <- c(86,88,72,74,61,90,89,68,76,114,90,78,94,74,147,58,86,94,63,86,69,72,128,85,82)
 weight <- log(weight)
 plot(weight~length)
-line <- lm(weight~line)
+line <- lm(weight~length)
 abline(line)
 plot(residuals(line)~weight)
 abline(h=0)
+```
+
+``` {r}
+
+weight <- c(83,70,61,54,44,106,84,39,42,197,102,57,130,51,640,28,80,110,33,90,36,38, 366,84,80)
+length <- c(86,88,72,74,61,90,89,68,76,114,90,78,94,74,147,58,86,94,63,86,69,72,128,85,82)
+
+newweight <- log(weight)
+print(newweight)
+
+plot(newweight~length)
+reg <- lm(newweight~length)
+abline(reg)
+
+plot(residuals(reg)~length)
+abline(h=0)
+cor(newweight, length)
+
 ```
